syntax = "proto3";

package api.rpc_sys.v1;

option go_package = "fkratos/api/rpc_sys/v1;v1";

// 变量的命名一律使用小驼峰命名法，例如：firstName、lastName等。
// 后缀定义:请求req,响应reply

// 权限服务
service Permission {
  //权限-列表
  rpc SysPermissionList(SysPermissionListReq) returns (SysPermissionListResp);
  //权限-单个权限信息
  rpc SysPermissionInfo(SysPermissionInfoReq) returns (SysPermissionInfoResp);
  //权限-保存
  rpc SysPermissionStore(SysPermissionStoreReq) returns (SysPermissionStoreResp);
  //权限-删除
  rpc SysPermissionDel(SysPermissionDelReq) returns (SysPermissionDelResp);
  //权限-修改状态
  rpc SysPermissionStatus(SysPermissionStatusReq) returns (SysPermissionStatusResp);
}

//权限信息
message SysPermissionInfo {
  string id = 1; // ID
  string pid = 2; // 上级菜单
  string type = 3; // 类型:menu_dir=菜单目录,menu=菜单项,button=页面按钮
  string title = 4; // 标题
  string name = 5; // 规则名称
  string path = 6; // 路由路径
  string icon = 7; // 图标
  string menuType = 8; // 菜单类型:tab=选项卡,link=链接,iframe=Iframe
  string url = 9; // Url
  string component = 10; // 组件路径
  int32 keepalive = 11; // 缓存:0=关闭,1=开启
  string extend = 12; // 扩展属性:none=无,add_rules_only=只添加为路由,add_menu_only=只添加为菜单
  string remark = 13; // 备注
  int32 sort = 14; // 权重(排序)
  int32 status = 15; // 状态:0=禁用,1=启用
  string createdAt = 16; // 创建时间
  string updatedAt = 17; // 更新时间
  repeated SysPermissionInfo children = 18;
}

//请求-权限-列表
message SysPermissionListReq {}

//响应-权限-列表
message SysPermissionListResp {
  repeated SysPermissionInfo list = 1; //列表
}

//请求-权限-单个权限信息
message SysPermissionInfoReq {
  string id = 1; //ID
}

//响应-权限-单个权限信息
message SysPermissionInfoResp {
  SysPermissionInfo info = 1; //信息
}

//请求-权限-保存
message SysPermissionStoreReq {
  string id = 1; // ID
  string pid = 2; // 上级菜单
  string type = 3; // 类型:menu_dir=菜单目录,menu=菜单项,button=页面按钮
  string title = 4; // 标题
  string name = 5; // 规则名称
  string path = 6; // 路由路径
  string icon = 7; // 图标
  string menuType = 8; // 菜单类型:tab=选项卡,link=链接,iframe=Iframe
  string url = 9; // Url
  string component = 10; // 组件路径
  int32 keepalive = 11; // 缓存:0=关闭,1=开启
  string extend = 12; // 扩展属性:none=无,add_rules_only=只添加为路由,add_menu_only=只添加为菜单
  string remark = 13; // 备注
  int32 sort = 14; // 权重(排序)
  int32 status = 15; // 状态:0=禁用,1=启用
}

//响应-权限-保存
message SysPermissionStoreResp {}

//请求-权限-删除
message SysPermissionDelReq {
  repeated string ids = 1; //ID集合
}

//响应-权限-删除
message SysPermissionDelResp {}

//请求-权限-修改状态
message SysPermissionStatusReq {
  string id = 1;
  int32 status = 2; // 状态:0=禁用,1=启用
}

//响应-权限-修改状态
message SysPermissionStatusResp {}
